# l1x-templ-erc20-cross-contract-call

./: .gitignore  Cargo.toml  devbox.json  devnet-services-dc.yml  package.json
l1x-conf/: config-contract-address-registry.yaml  event_listener_chain_config.yaml  get_dev_address.sh  l1x_chain_config.yaml
l1x-conf/scripts/: 009-01-uc-deploy-evm-erc20.json  010-01-uc-deploy-erc20-cross-call.json  011-01-uc-init-erc20-cross-call.json  012-00-test-vm-cc-erc20-transfer.json  012-01-test-vm-cc-erc20-balance-of-super.json  012-01-test-vm-cc-erc20-balance-of.json  012-02-test-vm-cc-erc20-transfer.json  012-03-test-vm-cc-erc20-balance-of-ava.json  012-04-test-vm-cc-erc20-balance-of-cc_contract.json  013-01-test-evm-erc20-transfer.json
l1x-contracts/l1x_evm_cross_contract/: Cargo.toml  README.md
l1x-contracts/l1x_evm_cross_contract/src/: lib.rs
l1x-evm-contracts/abi/MYERC20.sol/: MYERC20.json
l1x-evm-contracts/src/: MYERC20.sol
